# cpc-tree

./: .gitignore  .pre-commit-config.yaml  README.md  cpc_tree.py  pyproject.toml  test_cpc_tree.py
.github/workflows/: ci.yml
cpc_tree/: __init__.py  __main__.py
examples/: sample_usage.ipynb
src/cpc_tree/: __init__.py  __main__.py
tests/: conftest.py  test_cpc_tree.py
