[project]
name = "cpc-tree"
version = "0.1.0"
description = "Structuring the CPC classification codes tree in Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.pyright]
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
